--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,9 +24,10 @@
     If you use these permissions you must declare how you're using them to Google Play, otherwise the
     app will be rejected when publishing it. To avoid this we remove the permissions entirely.
     -->
-    <uses-permission android:name="com.google.android.gms.permission.AD_ID" tools:node="remove"/>
-    <uses-permission android:name="android.permission.ACCESS_ADSERVICES_ATTRIBUTION" tools:node="remove"/>
-    <uses-permission android:name="android.permission.ACCESS_ADSERVICES_AD_ID" tools:node="remove"/>
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID" tools:node="remove" />
+    <uses-permission android:name="android.permission.ACCESS_ADSERVICES_ATTRIBUTION"
+        tools:node="remove" />
+    <uses-permission android:name="android.permission.ACCESS_ADSERVICES_AD_ID" tools:node="remove" />
 
     <application
         android:name=".NiaApplication"
@@ -40,7 +41,7 @@
         <profileable android:shell="true" tools:targetApi="q" />
 
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashActivity"
             android:configChanges="uiMode"
             android:exported="true">
             <intent-filter>
@@ -58,15 +59,26 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+        </activity>
+
         <!-- Disable Firebase analytics by default. This setting is overwritten for the `prod`
         flavor -->
         <meta-data android:name="firebase_analytics_collection_deactivated" android:value="true" />
         <!-- Disable collection of AD_ID for all build variants -->
         <meta-data android:name="google_analytics_adid_collection_enabled" android:value="false" />
+        <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713   or
+        ca-app-pub-3554230884415364~6501138828 -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3940256099942544~3347511713" />
         <!-- Firebase automatically adds the following property which we don't use so remove it -->
         <property
             android:name="android.adservices.AD_SERVICES_CONFIG"
             tools:node="remove" />
+
 
     </application>
 
