--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,12 @@
             android:name="android.adservices.AD_SERVICES_CONFIG"
             tools:node="remove" />
 
+        <!-- AdMob App ID: Replace with your actual AdMob App ID from AdMob console -->
+        <!-- Example: ca-app-pub-3940256099942544~3347511713 (this is a test ID) -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3940256099942544~3347511713" />
+
     </application>
 
 </manifest>
